# Simple-Neural-Network

./: CMakeLists.txt  README.md
src/: activation.cpp  activation.h  layer.h  loss.h  main.cpp  network.h  neuron.h  types.h
